--- a/src/main/resources/templates/Facultylogin.html
+++ b/src/main/resources/templates/Facultylogin.html
@@ -24,9 +24,9 @@
 				<table border="0" cellpadding="10">
 					<tr>
 						<td>Name:</td>
-						<td><input type="text" th:field="${staff.name}"
+						<td><input type="text" th:field="${staff.id}"
 							class="w3-input"></td>
-							<td th:if= "${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</td>
+							<td th:if= "${#fields.hasErrors('id')}" th:errors="*{id}">Id Error</td>
 					</tr>
 					<tr>
 						<td>Password:</td>
